--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,20 +1,48 @@
 .footer {
-  display: flex;
   background: #2f303a;
+
+
+
+  // display: flex;
+}
+
+.footer__box {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  align-items: baseline;
+ justify-content: center;
+ 
+
+ 
+ @media screen and (min-width: 1200px) {
+  // justify-content: space-between;
+   gap: 70px; 
+  }
+    }
 }
 
 .footer__container {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-  gap: 70px;
-  margin-top: 60px;
-  margin-bottom: 60px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding-top: 60px;
+
+  @media screen and (min-width: 768px) and (max-width: 1199.98px) {
+    &:first-child {margin-right: 165px;}
+  }
+
+
+
+
+  & .logo {
+    display: block;
+    padding-bottom: 28px;
+  }
 }
 
 .footer__address {
   font-style: normal;
-  margin-top: 20px;
   margin-bottom: 0px;
 }
 
@@ -26,7 +54,7 @@
 }
 
 .footer__address--gap {
-  margin-bottom: 9px;
+  margin-bottom: 12px;
 }
 
 .footer__address--name {
@@ -56,15 +84,18 @@
 }
 
 .footer__form {
-  display: flex;
+  display: block;
+  // display: flex;
 }
 
 .footer__input {
-  width: 358px;
+  width: 100%;
+  // width: 358px;
   height: 50px;
+  margin-bottom: 20px;
   padding-left: 16px;
   background-color: #2f303a;
-  margin-right: 12px;
+  // margin-right: 12px;
   color: var(--white-color);
 
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -74,13 +105,15 @@
 }
 
 .footer__btn {
-  display: flex;
+  display: inline-flex;
 
   width: 200px;
   height: 50px;
   padding-left: 28px;
   align-items: center;
   text-align: center;
+  margin-bottom: 60px;
+
   background: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
