--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,4 +23,6 @@
 @import './components/portfolio-btn';
 @import './components/portfolio';
 @import './components/modal';
+@import './components/menu';
+
 
