--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -13,3 +13,9 @@ html {
     font-size: 14px;
     letter-spacing: 0.03em;
   }
+
+  img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
