--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,15 +1,34 @@
 .clients {
-    display: flex;
-    align-items: center;
+      display: flex;
+         align-items: center;
     justify-content: center;
     gap: 30px;
+
+    @media screen and (max-width: 1199.98px) {
+      flex-wrap: wrap;
+    }
   }
   
+  .clients_box {
+    
+    @media screen and (max-width: 767.98px) {
+      width: calc((100% - 30px)/2);
+       }
+
+    @media screen and (min-width: 768px) and (max-width: 1199.98px) {
+      width: calc((100% - 60px)/3);
+          }
+
+          @media screen and (min-width: 1200px) {
+            width: 170px;
+                }
+      }
+
   .clients__link {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 170px;
+    // width: 210px;
     height: 92px;
     border: 1px solid #afb1b8;
     border-radius: 4px;
@@ -17,7 +36,8 @@
     color: #afb1b8;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
       color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+ 
+    }
   
   .clients__link:hover,
   .clients__link:focus {
