--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,16 +1,19 @@
 .container {
   margin: 0 auto;
   padding: 0 15px;
+  outline: 1px solid red;
 
-  @media screen and (min-width: $mobile) {
-    width: $mobile;
+  @media screen and (min-width: 480px) {
+    width: 480px;
   }
 
-  @media screen and (min-width: $tablet) {
-    width: $tablet;
+  @media screen and (min-width: 768px) {
+    width: 768px;
   }
 
-  @media screen and (min-width: $desktop) {
-    width: $desktop;
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
   }
 }
+
+
