--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -8,18 +8,33 @@
 }
 
 .header__contacts {
-  display: inline-flex;
+display: none;
+
+  @media screen and (min-width: 768px) {
+      display: block;
   align-items: center;
+ 
+  }
+@media screen and (min-width: 1200px) {
+  display: flex;
+align-items: center;
+margin-right: 50px;}
+
 }
 
 .header__link {
-  display: inline-flex;
+  display: flex;
   justify-content: center;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--description-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 768px) and (max-width: 1199.98px) {
+    justify-content: left;
+    font-size: 12px;
+  margin-bottom: 10px;}
 
   &:hover,
   &:focus {
@@ -28,7 +43,8 @@
 }
 
 .header__link--gap {
-  margin-right: 50px;
+  @media screen and (min-width: 1200px) {
+  margin-right: 50px;}
 }
 
 .header__icon,
