--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,34 +1,74 @@
 .hero {
     text-align: center;
     background-color: #c4c4c4;
-    background-image: linear-gradient(
+ 
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+      background-image: linear-gradient(
         to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../img/Img-background.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+      url(../img/Hero-s480.jpg); 
+
+
+
+        @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx)
+        {background-image: url(../img/Hero-s960.jpg);}
+          
+
+          @media screen and (min-width: 481px) {
+            background-image: url(../img/Hero-m768.jpg);
+    
+            @media screen and (min-device-pixel-ratio: 2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx)
+            {background-image: url(../img/Hero-m1536.jpg);}
+              }   
+
+              @media screen and (min-width: 769px) {
+                background-image: url(../img/Hero-l1600.jpg);
+        
+                @media screen and (min-device-pixel-ratio: 2),
+                screen and (min-resolution: 192dpi),
+                screen and (min-resolution: 2dppx)
+                {background-image: url(../img/Hero-l3200.jpg);}
+                  }  
   }
   
   .hero--section {
+margin-left: auto;
+    margin-right: auto;
+max-width: 1600px;
+padding-top: 118px;
+padding-bottom: 118px;
+margin-bottom: 60px;
+
+@media screen and (min-width: 1200px) {
     padding-top: 200px;
     padding-bottom: 200px;
-    max-width: 1600px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-bottom: 94px;}
   }
   
   .hero__title {
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 26px;
+    line-height: 1.61;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--white-color);
     margin-bottom: 30px;
+
+    @media screen and (min-width: 1200px) {
+      font-size: 44px;
+    line-height: 1.36;
+    }
+
   }
   
   .hero__btn {
