--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -4,8 +4,13 @@
 }
 
 .nav__list {
+display: none;
+
+@media screen and (min-width: 768px) {
   display: flex;
-  padding-left: 0px;
+}
+  
+ 
 }
 
 .nav__item {
