--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,14 +1,14 @@
 .section {
-    padding-top: 60px;
+   
     padding-bottom: 60px;
 
-@media screen and (min-width: $tablet) {
-  padding-top: 60px;
+@media screen and (min-width: 768px) {
+ 
   padding-bottom: 60px;
 }
 
-@media screen and (min-width: $desktop) {
-  padding-top: 94px;
+@media screen and (min-width: 1200px) {
+
   padding-bottom: 94px;
 }
 
