--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -3,16 +3,32 @@
 }
 
 .team__container {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
 }
 
 .team__box {
+  // display: inline-block;
+  margin: 0px;
+
   background: #ffffff;
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-  gap: 30px;
+
+  @media screen and (max-width: 767.98px) {
+    width: 100%;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199.98px) {
+    width: calc((100% - 60px) / 2);
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+  }
 }
 
 .team__section {
