--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -7,7 +7,7 @@
     margin-bottom: 30px;
 
     
-    @media screen and (min-width: $desktop) {
+    @media screen and (min-width: 1200px) {
       font-size: 36px;
       margin-bottom: 50px;
     }
