--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,12 +1,11 @@
 :root {
-    --main-color: #212121;
-    --second-font: "Raleway", sans-serif;
-    --accent-color: #2196f3;
-    --white-color: #ffffff;
-    --description-color: #757575;
+  --main-color: #212121;
+  --second-font: "Raleway", sans-serif;
+  --accent-color: #2196f3;
+  --white-color: #ffffff;
+  --description-color: #757575;
 
-    // BREAKPOINTS
-$mobile: 480px;
-$tablet: 768px;
-$desktop: 1200px;
-  }
+  --mobile: 480px;
+  --tablet: 768px;
+  --desktop: 1200px;
+}
